# lazy-static-spin

./: Cargo.toml  README.md
src/: lazy.rs  lib.rs
tests/: test.rs
