[package]

name = "lazy_static_spin"
version = "0.1.7"
authors = [ "Marvin Löbel <loebel.marvin@gmail.com>",
            "John Ericson <Ericson2314@Yahoo.com" ]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = "A macro for declaring lazily evaluated statics in Rust."

# These URLs point to more information about the repository
repository = "https://github.com/RustOS-Fork-Holding-Ground/lazy-static-spin.git"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["macro", "lazy", "static"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# licenses. Multiple licenses can be separated with a `/`
license = "MIT"
